tests/ui/type-alias-impl-trait/multiple-def-uses-in-one-fn.stderr
error[E0277]: the trait bound `&'static B: From<&A>` is not satisfied
  --> $DIR/multiple-def-uses-in-one-fn.rs:9:45
   |
LL | fn f<A, B: 'static>(a: &'static A, b: B) -> (X<A, B>, X<B, A>) {
   |                                             ^^^^^^^^^^^^^^^^^^ the trait `From<&A>` is not implemented for `&'static B`
   |
   = note: required for `&A` to implement `Into<&'static B>`
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL | fn f<A, B: 'static>(a: &'static A, b: B) -> (X<A, B>, X<B, A>) where &'static B: From<&A> {
   |                                                                ++++++++++++++++++++++++++

error: concrete type differs from previous defining opaque type use
  --> $DIR/multiple-def-uses-in-one-fn.rs:9:45
   |
LL | fn f<A, B: 'static>(a: &'static A, b: B) -> (X<A, B>, X<B, A>) {
   |                                             ^^^^^^^^^^^^^^^^^^
   |                                             |
   |                                             expected `&B`, got `&A`
   |                                             this expression supplies two conflicting concrete types for the same opaque type

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
